# deltacat-cli

./: .gitignore  .pre-commit-config.yaml  CLI_DEMO.md  CLI_DEMO_SUMMARY.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
deltacat_cli/: __init__.py  app.py  config.py  main.py  version.py
deltacat_cli/catalog/: README.md  __init__.py  app.py  clear.py  context.py  current.py  init.py  operations.py  set.py  show.py  state.py
deltacat_cli/namespace/: README.md  __init__.py  alter.py  create.py  drop.py  get.py  list.py
deltacat_cli/table/: README.md  __init__.py  alter.py  app.py  create.py  drop.py  get.py  list.py  read.py
deltacat_cli/utils/: catalog_context.py  emojis.py  error_handlers.py  initialize_dc_catalog.py  print_as_json.py  print_json.py  table_context.py  table_properties.py  table_utils.py
tests/: test_cli.py  test_table_cli.py
