[project]
name = "deltacat-cli"
version = "0.1.0"
description = "A CLI application for working with deltacat"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "deltacat==2.0.0.post4",
    "s3fs==2025.3.2",
    "typer==0.20.0",
    "rich>=13.0.0",
]

[project.scripts]
deltacat-cli = "main:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
]
[tool.bandit]
# Bandit security linting configuration
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used test (common in CLI apps)

[tool.mypy]
# MyPy type checking configuration
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
