[project]
name = "deltacat-cli"
version = "0.1.0"
description = "A CLI application for working with deltacat"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["deltacat", "cli", "data", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = "==3.10.*"
dependencies = [
    "deltacat==2.0.0.post4",
    "s3fs>=2025.3.2",
    "typer>=0.20.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/deltacat-cli"
Repository = "https://github.com/yourusername/deltacat-cli"
Documentation = "https://github.com/yourusername/deltacat-cli#readme"
Issues = "https://github.com/yourusername/deltacat-cli/issues"

[project.scripts]
deltacat-cli = "deltacat_cli.app:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]


[tool.bandit]
# Bandit security linting configuration
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used test (common in CLI apps)

[tool.mypy]
# MyPy type checking configuration
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.hatch.build.targets.wheel]
packages = ["deltacat_cli"]

[tool.hatch.version]
path = "deltacat_cli/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
